--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,12 @@ spring.application.name=gestion-carrito
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.username=sa
+spring.datasource.password=
 spring.h2.console.settings.web-allow-others=true
+
+hibernate.hbm2ddl.auto=update
